# LittleAgent

./: .gitignore  README.md  README.zh-CN.md  config.example.toml  pyproject.toml
dashboard-ui/: index.html  package-lock.json  package.json  vite.config.ts
dashboard-ui/src/: App.vue  style.css
dashboard-ui/src/api/: client.ts  types.ts
dashboard-ui/src/components/: AppShell.vue  ConfirmDialog.vue  StatusBadge.vue
dashboard-ui/src/views/: DriftView.vue  EventsView.vue  MemoryView.vue  OverviewView.vue  PluginsView.vue  ProactiveView.vue  SessionsView.vue
docker/napcat/: docker-compose.example.yml  start.ps1  status.ps1  stop.ps1
docker/xiaohongshu-mcp/: docker-compose.example.yml  start.ps1  status.ps1  stop.ps1
mini_agent/: __main__.py  agent_loop.py  app.py  bootstrap.py  bus.py  config.py  llm.py  models.py  passive_turn.py
mini_agent/channels/: onebot_qq.py
mini_agent/dashboard/: api.py  auth.py  server.py  static.py
mini_agent/db/: migrations.py  stores.py
mini_agent/drift/: loop.py
mini_agent/mcp/: client.py  registry.py  tool.py
mini_agent/memory/: store.py
mini_agent/plugins/: catalog.py  context.py  group_messages.py  manager.py  state.py  xiaohongshu_search.py
mini_agent/proactive/: loop.py  sources.py
mini_agent/tools/: base.py  builtin.py  message_push.py  registry.py
tests/: test_agent_loop.py  test_app_cli.py  test_config_init_db.py  test_dashboard.py  test_drift.py  test_mcp.py  test_memory_store.py  test_message_bus.py  test_onebot_qq_channel.py  test_plugins.py  test_proactive.py  test_tool_registry.py
(+10 files in other folders)
