[project]
name = "mini-agent"
version = "0.1.0"
description = "Minimal Akashic-inspired QQ agent MVP"
requires-python = ">=3.9"
dependencies = [
  "pydantic>=2",
  "tomli>=2; python_version < '3.11'",
  "typer>=0.12",
  "fastapi>=0.115",
  "uvicorn>=0.34",
  "httpx>=0.27",
  "feedparser>=6",
  "websockets>=12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
